# RepoMindMCP

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/src/repomind/: __init__.py  config.py  ingest.py
backend/src/repomind/api/: main.py
backend/src/repomind/clients/: __init__.py  llm.py
backend/src/repomind/graph/: __init__.py  neo4j_client.py  writer.py
backend/src/repomind/parsers/: __init__.py  models.py  python_parser.py  treesitter_parser.py
backend/src/repomind/query/: __init__.py  nl_to_cypher.py
backend/tests/: conftest.py  test_api.py  test_graph_writer.py  test_ingest.py  test_nl_to_cypher.py  test_python_parser.py  test_treesitter_parser.py
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: backendClient.ts  index.ts
mcp-server/tests/: backendClient.test.ts
